# bogdan-butakov-bivt-22-16

./: README.md  main.py
.dvc/: config
hw2_repo/: Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
hw2_repo/config/: data_config.yaml
hw2_repo/config/model_config/: decision_tree.yaml  log_reg.yaml  random_forest.yaml
hw2_repo/hw2/: __init__.py  config.py  dataset.py  features.py  plots.py
hw2_repo/hw2/modeling/: predict.py  train.py  validation.py
hw2_repo/models/: .gitignore  decision_tree.joblib  log_reg.joblib  random_forest.joblib  random_forest.pkl
hw2_repo/reports/dvc/: features.csv.dvc
hw2_repo/tests/: test_config.py  test_generate_dataset.py
